--- a/appsettings.json
+++ b/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "MetaDetails": {
-    "Version": "0.1.8",
+    "Version": "0.1.9",
     "Name": "iLearnings",
     "ShortName": "LS",
-    "Description": "A simple finance goal application to track your financial goals and progress.",
+    "Description": "A Learning Platform which primarily uses .md file as CMS Content.",
 
     "InternalURLs": {
       "Home": "home",
