--- a/appsettings.json
+++ b/appsettings.json
@@ -13,11 +13,7 @@
     "Description": "A Learning Platform which primarily uses .md file as CMS Content.",
 
     "InternalURLs": {
-      "Home": "home",
-      "GoalList": "dynamic-forms/GoalContribution/List",
-      "GoalEntryAdd": "dynamic-forms/GoalContribution/add-plan",
-      "GoalEntryList": "dynamic-forms/GoalContribution/List",
-      "Learn": "dynamic-forms/AWS/Serverless"
+      "ReourceURL": "https://raw.githubusercontent.com/sr-ganesh-ram/Learning.Contents/main/source/"
     },
     "DefaultSettings": {
       "View": "card",
